--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index",
+    "start": "nodemon ./src/index",
     "test1": "jest"
   },
   "author": "",
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.12",
     "pg": "^8.6.0",
     "pg-promise": "^10.10.2"
   },
