--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.6.0",
     "pg-promise": "^10.10.2"
   },
